// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/viewHeader return viewHeader 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="ViewTabs"
    >
      <div
        style="position: relative;"
      >
        <div
          aria-selected="true"
          class="ViewTab ViewTab--active"
          role="tab"
        >
          <span
            class="ViewTab__icon"
          >
            <svg
              class="BoardIcon Icon"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </span>
          <span
            class="ViewTab__name"
          >
            view title
          </span>
        </div>
      </div>
      <div
        class="ViewTabs__addMenu"
      >
        <div
          class="ViewTabs__addButton"
        >
          +
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      aria-label="Properties menu"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          Properties
        </span>
      </button>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          Group by: 
          <span
            id="groupByLabel"
            style="color: rgb(var(--center-channel-color-rgb));"
          >
            Status
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalWrapper"
    >
      <button
        class="Button active"
        type="button"
      >
        <span>
          Filter
        </span>
      </button>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button active"
        type="button"
      >
        <span>
          Sort
        </span>
      </button>
    </div>
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
      />
    </div>
    <div
      class="ModalWrapper"
    >
      <div
        aria-label="View header menu"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="ButtonWithMenu"
    >
      <div
        class="button-text"
      >
        New
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="button-dropdown"
        >
          <i
            class="CompassIcon icon-chevron-down DropdownIcon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeader return viewHeader readonly 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="ViewTabs"
    >
      <div
        style="position: relative;"
      >
        <div
          aria-selected="true"
          class="ViewTab ViewTab--active"
          role="tab"
        >
          <span
            class="ViewTab__icon"
          >
            <svg
              class="BoardIcon Icon"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </span>
          <span
            class="ViewTab__name"
          >
            view title
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
      />
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeader return viewHeader without permissions 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="ViewTabs"
    >
      <div
        style="position: relative;"
      >
        <div
          aria-selected="true"
          class="ViewTab ViewTab--active"
          role="tab"
        >
          <span
            class="ViewTab__icon"
          >
            <svg
              class="BoardIcon Icon"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </span>
          <span
            class="ViewTab__name"
          >
            view title
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
      />
    </div>
    <div
      class="ModalWrapper"
    >
      <div
        aria-label="View header menu"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
